Groups logic added
